--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -1100,8 +1100,8 @@
     <div class="toast-container" id="toastContainer"></div>
     
     <script>
-        // API Configuration
-        const API_BASE_URL = 'http://localhost:8046';
+        // API Configuration - use relative URLs to work with any port
+        const API_BASE_URL = '';
         const CURRENT_DATE = new Date('2025-06-11 04:54:00');
         const USERNAME = 'soherucreate';
         
