--- a/app/web/login.html
+++ b/app/web/login.html
@@ -264,12 +264,12 @@
                 <form id="loginFormElement">
                     <div class="form-group">
                         <label class="form-label" for="username">Username</label>
-                        <input type="text" class="form-control" id="loginUsername" placeholder="Enter your username" required>
+                        <input type="text" class="form-control" id="loginUsername" placeholder="Enter your username" value="testuser" required>
                     </div>
                     
                     <div class="form-group">
                         <label class="form-label" for="password">Password</label>
-                        <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required>
+                        <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" value="testpass123" required>
                     </div>
                     
                     <button type="submit" class="btn btn-primary" id="loginButton">
