--- a/app/web/departments/development/projects.html
+++ b/app/web/departments/development/projects.html
@@ -924,7 +924,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/static/leave-requests.html" class="nav-link">
+                        <a href="/app/development/leave-requests" class="nav-link">
                             <i>📅</i>
                             Leave Requests
                         </a>
