--- a/app/web/departments/hr/settings.html
+++ b/app/web/departments/hr/settings.html
@@ -746,7 +746,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/app/settings" class="nav-link">
+                        <a href="/app/hr/leave-requests" class="nav-link">
                             <i>📅</i>
                             Leave Requests
                         </a>
