--- a/app/web/shared/leave-requests.html
+++ b/app/web/shared/leave-requests.html
@@ -717,7 +717,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/static/leave-requests.html" class="nav-link active">
+                        <a href="/app/leave-requests" class="nav-link active">
                             <i>📅</i>
                             Leave Requests
                         </a>
