--- a/app/web/departments/development/performance-reviews.html
+++ b/app/web/departments/development/performance-reviews.html
@@ -1143,7 +1143,7 @@
                 const token = localStorage.getItem('bhoomitechzone_token');
                 if (!token) return null;
                 
-                const response = await fetch('/api/user/me', {
+                const response = await fetch('/users/me', {
                     headers: {
                         'Authorization': `Bearer ${token}`,
                         'Content-Type': 'application/json'
