--- a/app/web/teams.html
+++ b/app/web/teams.html
@@ -852,7 +852,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/static/leave-requests.html" class="nav-link">
+                        <a href="/app/leave-requests" class="nav-link">
                             <i>📅</i>
                             Leave Requests
                         </a>
