--- a/app/web/departments/development/projects.html
+++ b/app/web/departments/development/projects.html
@@ -1475,6 +1475,7 @@
                     { href: '/app/it/penalties', icon: '⚠️', label: 'Penalties' }
                 ]
             };
+            // Settings removed for development login
 
             // Default to employee if role not found
             const menuItems = navigationConfigs[userRole] || navigationConfigs['employee'];
