--- a/app/web/departments/hr/dashboard.html
+++ b/app/web/departments/hr/dashboard.html
@@ -572,11 +572,7 @@
                             <i>👤</i>Profile
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="/app/hr/settings" class="nav-link">
-                            <i>⚙️</i>Settings
-                        </a>
-                    </li>
+                    <!-- Settings removed for HR login -->
                 </ul>
             </nav>
             
@@ -605,9 +601,7 @@
                         <a href="/app/hr/profile" class="dropdown-item">
                             <i>👤</i> Your Profile
                         </a>
-                        <a href="/app/hr/settings" class="dropdown-item">
-                            <i>⚙️</i> Settings
-                        </a>
+                        <!-- Settings removed for HR login -->
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item" id="logoutBtn">
                             <i>🚪</i> Log Out
