--- a/app/web/departments/hr/employees.html
+++ b/app/web/departments/hr/employees.html
@@ -202,11 +202,7 @@
                             <i>👤</i>Profile
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="/app/hr/settings" class="nav-link">
-                            <i>⚙️</i>Settings
-                        </a>
-                    </li>
+                    <!-- Settings removed for HR login -->
                 </ul>
             </nav>
             
