--- a/app/web/departments/development/attendance.html
+++ b/app/web/departments/development/attendance.html
@@ -1964,17 +1964,26 @@
                 console.log('Sending check-in request...');
                 console.log(`User: ${localStorage.getItem('username') || 'current user'}, Time: ${formatISTDateTime(new Date())}`);
                 
+                // Get user_id from currentUser or localStorage
+                let userId = null;
+                if (window.currentUser && (window.currentUser.id || window.currentUser._id)) {
+                    userId = window.currentUser.id || window.currentUser._id;
+                } else {
+                    userId = localStorage.getItem('user_id');
+                }
+                const payload = {
+                    user_id: userId,
+                    check_in_location: location,
+                    check_in_note: note,
+                    date: new Date().toISOString().split('T')[0]
+                };
                 const response = await fetch('/attendance/check-in', {
                     method: 'POST',
                     headers: {
                         'Authorization': `Bearer ${token}`,
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({
-                        check_in_location: location,
-                        check_in_note: note,
-                        date: new Date().toISOString().split('T')[0]
-                    })
+                    body: JSON.stringify(payload)
                 });
                 
                 if (!response.ok) {
