--- a/app/web/departments/hr/performance-reviews.html
+++ b/app/web/departments/hr/performance-reviews.html
@@ -1100,8 +1100,7 @@
                 { icon: '👥', label: 'Team', href: '/app/it/team' },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' },
                 { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' },
-                { icon: '📈', label: 'Reports', href: '/app/it/reports' },
-                { icon: '⚙️', label: 'Settings', href: '/app/it/settings' }
+                { icon: '📈', label: 'Reports', href: '/app/it/reports' }
             ]
         };
         // Hide Settings for HR role
