--- a/app/web/departments/development/leave-requests.html
+++ b/app/web/departments/development/leave-requests.html
@@ -1008,7 +1008,7 @@
                 { icon: '⭐', label: 'Performance', href: '/app/it/performance' },
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests', active: true },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
+                // { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
             ],
             team_lead: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
