--- a/app/web/departments/development/performance-reviews.html
+++ b/app/web/departments/development/performance-reviews.html
@@ -1077,7 +1077,7 @@
                 { icon: '⭐', label: 'Performance', href: '/app/it/performance', active: true },
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests' },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
+                // { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
             ],
             team_lead: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
@@ -1088,7 +1088,7 @@
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests' },
                 { icon: '👥', label: 'Team', href: '/app/it/team' },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
+                // { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
             ],
             manager: [
                 { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
@@ -1099,7 +1099,7 @@
                 { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests' },
                 { icon: '👥', label: 'Team', href: '/app/it/team' },
                 { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' },
+                // { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' },
                 { icon: '📈', label: 'Reports', href: '/app/it/reports' },
                 { icon: '⚙️', label: 'Settings', href: '/app/it/settings' }
             ]
