--- a/app/web/departments/development/profile.html
+++ b/app/web/departments/development/profile.html
@@ -712,65 +712,65 @@
             <nav class="sidebar-nav">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="/app/dashboard" class="nav-link">
+                        <a href="/app/it/dashboard" class="nav-link">
                             <i>📊</i>
                             Dashboard
                         </a>
                     </li>
                     <li class="nav-item employee-nav">
-                        <a href="/app/attendance" class="nav-link">
+                        <a href="/app/it/attendance" class="nav-link">
                             <i>🕒</i>
                             Attendance
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/app/projects" class="nav-link">
+                        <a href="/app/it/projects" class="nav-link">
                             <i>📁</i>
                             Projects
                         </a>
                     </li>
                     <li class="nav-item employee-nav">
-                        <a href="/app/daily-reports" class="nav-link">
+                        <a href="/app/it/daily-reports" class="nav-link">
                             <i>📝</i>
                             Daily Reports
                         </a>
                     </li>
-                    <li class="nav-item manager-nav">
-                        <a href="/app/teams" class="nav-link">
+                    <!-- <li class="nav-item manager-nav">
+                        <a href="/app/it/teams" class="nav-link">
                             <i>👥</i>
                             Team
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a href="/app/performance-reviews" class="nav-link">
+                        <a href="/app/it/performance" class="nav-link">
                             <i>⭐</i>
                             Performance
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/app/leave-requests" class="nav-link">
+                        <a href="/app/it/leave-requests" class="nav-link">
                             <i>📅</i>
                             Leave Requests
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/app/profile" class="nav-link active">
+                        <a href="/app/it/profile" class="nav-link active">
                             <i>👤</i>
                             Profile
                         </a>
                     </li>
-                    <li class="nav-item hr-nav manager-nav director-nav">
-                        <a href="/app/salary" class="nav-link">
+                    <!-- <li class="nav-item hr-nav manager-nav director-nav">
+                        <a href="/app/it/salary" class="nav-link">
                             <i>💰</i>
                             Salary & Payroll
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/app/penalties" class="nav-link">
+                        <a href="/app/it/penalties" class="nav-link">
                             <i>⚠️</i>
                             Penalties
                         </a>
-                    </li>
+                    </li> -->
                     <!-- Settings removed for development login -->
                 </ul>
             </nav>
