--- a/app/web/departments/hr/dashboard.html
+++ b/app/web/departments/hr/dashboard.html
@@ -534,7 +534,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="/app/hr/employees" class="nav-link">
-                            <i>👥</i>Employee Management
+                            <i>👥</i>Employee
                         </a>
                     </li>
                     <li class="nav-item">
