--- a/app/web/departments/hr/performance-reviews.html
+++ b/app/web/departments/hr/performance-reviews.html
@@ -1091,16 +1091,20 @@
                 { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' }
             ],
             manager: [
-                { icon: '📊', label: 'Dashboard', href: '/app/it/dashboard' },
-                { icon: '🕒', label: 'Attendance', href: '/app/it/attendance' },
-                { icon: '📁', label: 'Projects', href: '/app/it/projects' },
-                { icon: '📝', label: 'Daily Reports', href: '/app/it/daily-reports' },
-                { icon: '⭐', label: 'Performance', href: '/app/it/performance', active: true },
-                { icon: '📅', label: 'Leave Requests', href: '/app/it/leave-requests' },
-                { icon: '👥', label: 'Team', href: '/app/it/team' },
-                { icon: '👤', label: 'Profile', href: '/app/it/profile' },
-                { icon: '⚠️', label: 'Penalties', href: '/app/it/penalties' },
-                { icon: '📈', label: 'Reports', href: '/app/it/reports' }
+                { icon: '📊', label: 'Dashboard', href: '/app/hr/dashboard' },
+                { icon: '👥', label: 'Employees', href: '/app/hr/employees' },
+                { icon: '🕒', label: 'Attendance', href: '/app/hr/recruitment' },
+                { icon: '💰', label: 'Payroll', href: '/app/hr/payroll' },
+                { icon: '🎯', label: 'Recruitment', href: '/app/hr/recutment' },
+                { icon: '📅', label: 'Leave Requests', href: '/app/hr/leave-requests' },
+                { icon: '⭐', label: 'Performance', href: '/app/hr/performance', active: true }, 
+                { icon: '📈', label: 'Reports', href: '/app/hr/reports' },
+                // { icon: '📁', label: 'Projects', href: '/app/hr/projects' },
+                // { icon: '📝', label: 'Daily Reports', href: '/app/hr/daily-reports' },               
+                // { icon: '👥', label: 'Team', href: '/app/hr/team' },
+                { icon: '👤', label: 'Profile', href: '/app/hr/profile' },
+                // { icon: '⚠️', label: 'Penalties', href: '/app/hr/penalties' },
+                
             ]
         };
         // Hide Settings for HR role
