--- a/app/web/departments/hr/profile.html
+++ b/app/web/departments/hr/profile.html
@@ -712,55 +712,61 @@
             <nav class="sidebar-nav">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="/app/dashboard" class="nav-link">
+                        <a href="/app/hr/dashboard" class="nav-link">
                             <i>📊</i>
                             Dashboard
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/app/hr/employees" class="nav-link">
+                            <i>👥</i>
+                            Employees
+                        </a>
+                    </li>
                     
                     <li class="nav-item employee-nav">
-                        <a href="/app/attendance" class="nav-link">
+                        <a href="/app/hr/attendance" class="nav-link">
                             <i>🕒</i>
                             Attendance
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a href="/app/projects" class="nav-link">
-                            <i>📁</i>
-                            Projects
-                        </a>
-                    </li>
                     <li class="nav-item employee-nav">
-                        <a href="/app/daily-reports" class="nav-link">
-                            <i>📝</i>
-                            Daily Reports
+                        <a href="/app/hr/payroll" class="nav-link">
+                            <i>💰</i>
+                            Payroll
+                        </a>
+                    <li class="nav-item">
+                        <a href="/app/hr/recruitment" class="nav-link">               
+                            <i>🎯</i>
+                            Recruitment
                         </a>
                     </li>
+                    
                     <li class="nav-item manager-nav">
-                        <a href="/app/teams" class="nav-link">
-                            <i>👥</i>
-                            Team
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/app/performance-reviews" class="nav-link">
-                            <i>⭐</i>
-                            Performance
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/app/leave-requests" class="nav-link">
+                        <a href="/app/hr/leave-requests" class="nav-link">
                             <i>📅</i>
                             Leave Requests
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/app/profile" class="nav-link active">
+                        <a href="/app/hr/performance" class="nav-link">
+                            <i>⭐</i>
+                            Performance
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/app/hr/reports" class="nav-link">
+                            <i>📈</i>
+                            Reports
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/app/hr/Profile" class="nav-link active">
                             <i>👤</i>
                             Profile
                         </a>
                     </li>
-                    <li class="nav-item hr-nav manager-nav director-nav">
+                    <!-- <li class="nav-item hr-nav manager-nav director-nav">
                         <a href="/app/salary" class="nav-link">
                             <i>💰</i>
                             Salary & Payroll
@@ -771,7 +777,7 @@
                             <i>⚠️</i>
                             Penalties
                         </a>
-                    </li>
+                    </li> -->
                     <!-- Remove settings for HR login -->
                 </ul>
             </nav>
