--- a/app/web/departments/sales/dashboard.html
+++ b/app/web/departments/sales/dashboard.html
@@ -1486,7 +1486,7 @@
                     },
                     body: JSON.stringify({
                         check_in_note: 'Checked in via dashboard',
-                        check_in_location: 'Office' // Add required location field
+                        check_in_location: 'Office'
                     })
                 });
                 
