--- a/app/web/departments/hr/employees.html
+++ b/app/web/departments/hr/employees.html
@@ -164,7 +164,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="/app/hr/employees" class="nav-link active">
-                            <i>👥</i>Employee Management
+                            <i>👥</i>Employee
                         </a>
                     </li>
                     <li class="nav-item">
