--- a/app/web/departments/development/projects.html
+++ b/app/web/departments/development/projects.html
@@ -437,6 +437,7 @@
             margin-bottom: 1rem;
             color: var(--text-secondary);
             display: -webkit-box;
+            line-clamp: 3; /* Standard (not widely supported yet) */
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
             overflow: hidden;
