--- a/app/web/login.html
+++ b/app/web/login.html
@@ -465,7 +465,7 @@
                         throw new Error('No authentication token found');
                     }
 
-                    const response = await fetch('/current-user', {
+                    const response = await fetch('/users/me', {
                         headers: {
                             'Authorization': `Bearer ${token}`
                         }
@@ -519,9 +519,9 @@
                 
                 if (dept === 'sales') {
                     return '/app/sales/dashboard';
-                } else if (dept === 'hr' || dept === 'management') {
+                } else if (dept === 'human resources' || dept === 'hr') {
                     return '/app/hr/dashboard';
-                } else if (dept === 'it' || dept === 'development') {
+                } else if (dept === 'development') {
                     return '/app/it/dashboard';
                 }
                 
