--- a/app/web/departments/hr/employees.html
+++ b/app/web/departments/hr/employees.html
@@ -256,10 +256,9 @@
                             </div>
                             <select id="departmentFilter" class="form-select" style="min-width: 150px;">
                                 <option value="">All Departments</option>
-                                <option value="Development">Development</option>
                                 <option value="Sales">Sales</option>
-                                <option value="HR">HR</option>
-                                <option value="Management">Management</option>
+                                <option value="Human Resources">Human Resources</option>
+                                <option value="Development">Development</option>
                             </select>
                             <select id="statusFilter" class="form-select" style="min-width: 120px;">
                                 <option value="">All Status</option>
@@ -339,10 +338,9 @@
                             <label class="form-label">Department *</label>
                             <select id="department" name="department" class="form-select" required>
                                 <option value="">Select Department</option>
-                                <option value="Development">Development</option>
                                 <option value="Sales">Sales</option>
-                                <option value="HR">HR</option>
-                                <option value="Management">Management</option>
+                                <option value="Human Resources">Human Resources</option>
+                                <option value="Development">Development</option>
                             </select>
                         </div>
                         
