--- a/app/web/login.html
+++ b/app/web/login.html
@@ -336,11 +336,9 @@
                         <label class="form-label" for="department">Department</label>
                         <select class="form-control" id="department" required>
                             <option value="">Select department</option>
-                            <option value="Development">Development</option>
-                            <option value="Design">Design</option>
                             <option value="Sales">Sales</option>
-                            <option value="Marketing">Marketing</option>
-                            <option value="HR">HR</option>
+                            <option value="Human Resources">Human Resources</option>
+                            <option value="Development">Development</option>
                         </select>
                     </div>
                     
