Changed Department Everywhere

--- a/app/web/departments/hr/payroll.html
+++ b/app/web/departments/hr/payroll.html
@@ -417,10 +417,9 @@
                         <label class="form-label">Department</label>
                         <select id="payrollDepartment" name="department" class="form-select">
                             <option value="">All Departments</option>
-                            <option value="Development">Development</option>
                             <option value="Sales">Sales</option>
-                            <option value="HR">HR</option>
-                            <option value="Management">Management</option>
+                            <option value="Human Resources">Human Resources</option>
+                            <option value="Development">Development</option>
                         </select>
                     </div>
                     
