--- a/app/web/departments/hr/attendance.html
+++ b/app/web/departments/hr/attendance.html
@@ -361,10 +361,9 @@
                             <input type="date" id="dateFilter" class="form-input" style="min-width: 150px;">
                             <select id="departmentFilter" class="form-select" style="min-width: 150px;">
                                 <option value="">All Departments</option>
-                                <option value="Development">Development</option>
                                 <option value="Sales">Sales</option>
-                                <option value="HR">HR</option>
-                                <option value="Management">Management</option>
+                                <option value="Human Resources">Human Resources</option>
+                                <option value="Development">Development</option>
                             </select>
                             <select id="statusFilter" class="form-select" style="min-width: 120px;">
                                 <option value="">All Status</option>
