--- a/app/web/departments/hr/reports.html
+++ b/app/web/departments/hr/reports.html
@@ -319,10 +319,9 @@
                                     <label class="form-label">Department</label>
                                     <select id="departmentFilter" class="form-select">
                                         <option value="">All Departments</option>
-                                        <option value="Development">Development</option>
                                         <option value="Sales">Sales</option>
-                                        <option value="HR">HR</option>
-                                        <option value="Management">Management</option>
+                                        <option value="Human Resources">Human Resources</option>
+                                        <option value="Development">Development</option>
                                     </select>
                                 </div>
                                 
